# electro_net

./: .env.semple  README.md  constants.py  pyproject.toml
config/: settings.py  urls.py
electro_net/: admin.py  apps.py  models.py  serializer.py  urls.py  views.py
electro_net/migrations/: 0001_initial.py
users/: models.py  serializer.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
